# pgmnemo

./: .editorconfig  .env.example  .gitignore  ADOPTERS.md  AGENTS.md  BENCH_READINESS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPETITIVE_TRACKING.md  CONTRIBUTING.md  DELIVERY_REPORT_FINAL_SESSION.md  DELIVERY_REPORT_SWDEV-260524-1-SHIP.md  FINAL_DELIVERY_REPORT_v0.6.3.md  FOUNDER_BRIEF_OPTION_D_2026-05-19.md  GROWTH_STRATEGY_v2_OPTION_D_2026-05-19.md  INSTALL.md  LICENSE  META.json  Makefile  OPERATOR_FINAL_PUSH.md  POSITIONING.md  README.md  RELEASE_SCOPE_0.9.1_2026-06-14.md  ROADMAP.md  SECURITY.md  STARTUP_TEMPLATE_FILLED.md  TASK_SUMMARY_WG-RESTRATEGY-260519.md  index.html  installcheck-0.10.0-report.md  installcheck-0.10.1-report.md  installcheck-0.12.0-report.md  package-verify-0.10.1-report.md  package-verify-0.12.0-report.md  pgmnemo.control  pyproject.toml  regression.out
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
assets/: demo.tape
benchmarks/: HISTORY.md  METRICS_BY_VERSION.md  PROTOCOL.md  README.md  REPORT_TEMPLATE.md  REPORT_v0.2.2_HYBRID.md
design/: BUILD_MVP_EXT_PHASE1.md  PROPERTY_CONVENTIONS.md  RECONCILE_0.11.0.md  RFC-001-memory-organism.md  SLUG_CONVENTION.md
docs/: AGENT_INTEGRATION.md  BENCHMARKS.md  BENCHMARK_PROTOCOL.md  COMPATIBILITY.md  COMPETITIVE_REALITY.md  CONFIDENCE_BOOST_GUIDE.md  INSTALL.md  LABELS.md  LICENSE_DECISION.md  MIGRATION.md  POSITIONING.md  PRODUCTION_READINESS.md  PRODUCT_PLAN.md  RELEASE_CHECKLIST.md  RELEASE_RUNBOOK.md  RESEARCH_BRIEF_v0.7.md  ROADMAP.md  SQL_REFERENCE.md  STRATEGY.md  SUPPORT.md  TACTICAL_M1.md  USAGE.md  WHY_PGMNEMO.md  WHY_PGMNEMO_ENTERPRISE.md
examples/: 01_reinforce_ranking_flip.py  02_mcp_quickstart.py  04_provenance_gate.py  README.md  docker-compose.yml  migrate_external_memory.sql
extension/: Makefile  SMOKE_TEST.md  pgmnemo--0.0.1--0.1.0.sql  (+79 more)
integrations/langchain/: README.md  pyproject.toml
integrations/langchain/pgmnemo_langchain/: __init__.py  retriever.py
integrations/langchain/tests/: test_retriever_smoke.py
pgmnemo_client/: pyproject.toml
pgmnemo_client/pgmnemo_client/: __init__.py  client.py  embed.py  extraction.py
pgmnemo_client/tests/: test_client.py
pgmnemo_mcp/: .dockerignore  DOCKERHUB.md  Dockerfile  README.md  __init__.py  pyproject.toml  server.py
pgmnemo_mcp/pgmnemo_mcp/: __init__.py  __main__.py  config.py  server.py
pgmnemo_mcp/pgmnemo_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pgmnemo_mcp/tests/: conftest.py  test_embedding.py  test_import.py  test_packaging.py  test_server.py
(+454 files in other folders)
