[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pgmnemo-langchain"
version = "0.1.0"
description = "LangChain BaseRetriever adapter for pgmnemo — PostgreSQL multi-agent memory"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "langchain-core>=0.2",
    "psycopg2-binary",
    "pgvector",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-mock"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pgmnemo_langchain*"]
